[gd_scene load_steps=11 format=3 uid="uid://gnh2y3rvcs5f"]

[ext_resource type="Script" path="res://Scene_Switcher/level/level_boss.gd" id="1_jntny"]
[ext_resource type="Texture2D" uid="uid://dc3b7mlvegkil" path="res://Scene_Switcher/level/asset/special_city/city_boss_1.jpg" id="2_r4lxk"]
[ext_resource type="PackedScene" uid="uid://bfh8txg0uot2h" path="res://Scene_Switcher/enemy/Boss/Boss.tscn" id="2_tu0c0"]
[ext_resource type="Texture2D" uid="uid://bvs85capc8req" path="res://Scene_Switcher/level/asset/special_city/city_boss_2.jpg" id="3_ypgqa"]
[ext_resource type="Texture2D" uid="uid://df382teo6xrso" path="res://Scene_Switcher/level/asset/normal_city/city_1.png" id="4_kcx1n"]
[ext_resource type="Texture2D" uid="uid://blxptfym4pndh" path="res://Scene_Switcher/level/asset/special_city/city_3_boss_hole.jpg" id="4_uwxq5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_862xo"]
size = Vector2(424.5, 1106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_htjal"]
size = Vector2(82, 64.9412)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f37ut"]
size = Vector2(332.8, 1106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5kvw"]
size = Vector2(2410, 320)

[node name="level_boss" type="Node2D"]
script = ExtResource("1_jntny")
boss_scene = ExtResource("2_tu0c0")

[node name="point_spawn" type="Marker2D" parent="."]
position = Vector2(960, 832)

[node name="Sprites" type="Node2D" parent="."]

[node name="City_boss_death" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("4_kcx1n")
centered = false

[node name="City_boss_building" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("2_r4lxk")
centered = false

[node name="City_boss_fire" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("3_ypgqa")
centered = false

[node name="City_boss_hole" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("4_uwxq5")
centered = false

[node name="left_border" type="Node2D" parent="."]
position = Vector2(128, 544)
scale = Vector2(4, 17)

[node name="StaticBody2D" type="StaticBody2D" parent="left_border" groups=["decor_static"]]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/StaticBody2D"]
position = Vector2(203.75, 552)
shape = SubResource("RectangleShape2D_862xo")

[node name="limit" type="StaticBody2D" parent="left_border"]
collision_layer = 16
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/limit"]
position = Vector2(7, 0.470589)
shape = SubResource("RectangleShape2D_htjal")
debug_color = Color(0.768046, 0.445917, 0.0402837, 0.42)

[node name="right_border" type="Node2D" parent="."]
position = Vector2(1760, 544)
scale = Vector2(5, 17)

[node name="StaticBody2D" type="StaticBody2D" parent="right_border"]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/StaticBody2D"]
position = Vector2(89.6, 552)
shape = SubResource("RectangleShape2D_f37ut")

[node name="limit" type="StaticBody2D" parent="right_border"]
position = Vector2(-326.4, 0)
scale = Vector2(0.8, 1)
collision_layer = 16
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/limit"]
position = Vector2(406, 0.470589)
shape = SubResource("RectangleShape2D_htjal")
debug_color = Color(0.768046, 0.445917, 0.0402837, 0.42)

[node name="top_border" type="Node2D" parent="."]

[node name="limit" type="StaticBody2D" parent="top_border"]
position = Vector2(-326.4, 0)
scale = Vector2(0.8, 1)
collision_layer = 16
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_border/limit"]
position = Vector2(1603, 160)
shape = SubResource("RectangleShape2D_l5kvw")
debug_color = Color(0.768046, 0.445917, 0.0402837, 0.42)
